# shell-craft

./: .coveragerc  .gitignore  Dockerfile  LICENSE  README.md  ai.py  pyproject.toml  requirements.txt
.github/workflows/: code-coverage.yml  package-publish.yml  semver-bump.yml  unit-tests-run.yml
shell_craft/: __init__.py  __main__.py  cli.py  configuration.py  service.py
shell_craft/cli/: __init__.py  commands.py  github.py  help.py  key.py  language.py  main.py  models.py  parser.py  prompt.py  request.py  results.py  types.py
shell_craft/configuration/: __init__.py  aggregate.py  configuration.py  dictionary.py  json.py
shell_craft/factories/: __init__.py  prompt.py
shell_craft/prompts/: __init__.py  bash.py  feature_request.py  languages.py  powershell.py  prompt.py  python.py  templates.py
shell_craft/service/: __init__.py
shell_craft/services/: __init__.py  service.py
shell_craft/services/openai/: __init__.py  settings.py
tests/: test_cli.py  test_cli_types.py  test_configuration.py  test_factories.py
