[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_shell_craft"
version = "0.8.1"
authors = [
  { name="Johnathan Irvin", email="irvinjohnathan@gmail.com" },
]
description = "Generating shell commands and code using natural language models (OpenAI ChatGPT)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "psutil",
]

[project.urls]
"Homepage" = "https://github.com/JohnnyIrvin/shell-craft"
"Bug Tracker" = "https://github.com/JohnnyIrvin/shell-craft/issues"

[project.scripts]
shell-craft = "shell_craft.cli:main"
